@@ -5,6 +5,8 @@ cdebconf (0.72) UNRELEASED; urgency=low
       + Allocate choices, choices_translated, and defvals dynamically. Fixes
         several crash bugs.
       + Fix a type mismatch that generated a compiler warning.
+      + Disable help popup on multiselects, since it made it impossible to
+        actually select anything.
 
  -- Colin Watson <cjwatson@debian.org>  Mon,  4 Oct 2004 15:27:40 +0100
 
